added blank page target

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">I am <span style="color: #d63031;">Jesse Bing Han</span>.</h2>
                         <p class="text-white-50">
-                            A computer science specialist studying at the <a href="https://www.utoronto.ca/">University of Toronto</a>.
+                            A computer science specialist studying at the <a href="https://www.utoronto.ca/" target="_blank">University of Toronto</a>.
                             A communicative software engineer with over 2 years experience in full-stack development. A 2024 graduate who enjoys
                             the challenge of solving complex problems.
                         </p>
