--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h1 class="text-center mx-auto mb-5">Projects</h1>
                 <!-- Project One -->
                 <div class="row gx-0 mb-5 mb-lg-0 gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/kunjiajia-logo.jpg" alt="Kunjiajia logo" /></div>
+                    <div class="col-lg-6"><a href="https://www.kunjiajia.com/#/" target="_blank"><img class="img-fluid" src="assets/img/kunjiajia-logo.jpg" alt="Kunjiajia logo"/></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -95,7 +95,7 @@
                 </div>
                 <!-- Project Two -->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/crypto-demo.jpg" alt="Cryptocurrency chart" /></div>
+                    <div class="col-lg-6"><a href="https://github.com/dev-jesse/crypto-trading-bot" target="_blank"><img class="img-fluid" src="assets/img/crypto-demo.jpg" alt="Cryptocurrency chart" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -110,7 +110,7 @@
                 </div>
                 <!-- Project Three -->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/fractal-demo.png" alt="..." /></div>
+                    <div class="col-lg-6"><a href="https://fractal-edu.herokuapp.com/" target="_blank"><img class="img-fluid" src="assets/img/fractal-demo.png" alt="Fractal website" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
