better image sizing

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h1 class="text-center mx-auto mb-5">Projects</h1>
                 <!-- Project One -->
                 <div class="row gx-0 mb-5 mb-lg-0 gx-0 justify-content-center">
-                    <div class="col-lg-6"><a href="https://www.kunjiajia.com/#/" target="_blank"><img class="img-fluid" src="assets/img/kunjiajia-logo.jpg" alt="Kunjiajia logo"/></a></div>
+                    <div class="col-lg-6"><a href="https://www.kunjiajia.com/#/" target="_blank"><img class="img-fluid" src="assets/img/kunjiajia-logo.jpeg" alt="Kunjiajia logo"/></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
