--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <!-- Project Three -->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><a href="https://fractal-edu.herokuapp.com/" target="_blank"><img class="img-fluid" src="assets/img/fractal-demo.png" alt="Fractal website" /></a></div>
+                    <div class="col-lg-6"><a href="https://fractal-edu.herokuapp.com/" target="_blank"><img class="img-fluid" src="assets/img/fractal-site.png" alt="Fractal website" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
