--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">I am <span style="color: #d63031;">Jesse Bing Han</span>.</h2>
+                        <h2 class="text-white mb-4">I am 
+                            <span class="txt-type" style="color: #c23616;" data-wait="3000" data-words='["Jesse Bing Han", "a Developer", "Enrolled in the University of Toronto", "a Bad Cook", "a Web Designer", "Very Tired", "a Computer Science Specialist", "Interested in Algorithms", "Looking for a Job", "Drinking Boba Rn :)"]'></span>
+                            <!-- <span style="color: #d63031;">Jesse Bing Han</span>. -->
+                        </h2>
                         <p class="text-white-50">
                             A computer science specialist studying at the <a href="https://www.utoronto.ca/" target="_blank">University of Toronto</a>.
                             A communicative software engineer with over 2 years experience in full-stack development. A 2024 graduate who enjoys
@@ -66,6 +69,7 @@
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
+
                 <!-- Featured Project Row-->
                 <!-- <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/kunjiajia-demo.png" alt="..." /></div>
@@ -116,7 +120,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Fractal Education</h4>
-                                    <p class="mb-0 text-white-50">Mockup website for a startup idea. Uses MySQL database to store login information.</p>
+                                    <p class="mb-0 text-white-50">Mock website using Apache + MySQL database to store login information securely (MD5).</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
@@ -172,5 +176,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/scripts.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="js/typewriter.js"></script>
     </body>
 </html>
