--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">I am 
-                            <span class="txt-type" style="color: #c23616;" data-wait="3000" data-words='["Jesse Bing Han", "a Developer", "Enrolled in the University of Toronto", "a Bad Cook", "a Web Designer", "Very Tired", "a Computer Science Specialist", "Interested in Algorithms", "Looking for a Job", "Drinking Boba Rn :)"]'></span>
+                            <span class="txt-type" style="color: #c23616;" data-wait="3000" data-words='["Jesse Bing Han", "a Developer", "Enrolled in the University of Toronto", "a Bad Cook", "a Web Designer", "an Honors Student", "a Computer Science Specialist", "Interested in Algorithms", "Looking for a Job", "Drinking Boba Rn :)"]'></span>
                             <!-- <span style="color: #d63031;">Jesse Bing Han</span>. -->
                         </h2>
                         <p class="text-white-50">
