--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
+                                <a href="mailto:jesse@kunjiajia.com" target="_blank" style="text-decoration: none; color: inherit;">
                                 <i class="fas fa-envelope mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
+                                </a>
                                 <hr class="my-4 mx-auto" />
                                 <div class="small text-black-50"><a href="mailto:jesse@kunjiajia.com" target="_blank" style="text-decoration: none; color: inherit;">jesse@kunjiajia.com</a></div>
                             </div>
@@ -157,8 +159,10 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
+                                <a href="tel:4034372827" target="_blank" style="text-decoration: none; color: inherit;">
                                 <i class="fas fa-mobile-alt mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
+                                </a>
                                 <hr class="my-4 mx-auto" />
                                 <div class="small text-black-50"><a href="tel:4034372827" target="_blank" style="text-decoration: none; color: inherit;">+1 (403) 437-2827</a></div>
                             </div>
