changed to maps

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
-                                <a href="https://www.utoronto.ca/" target="_blank" style="text-decoration: none; color: inherit;">
+                                <a href="https://goo.gl/maps/Rhtn3knZB1faM2JGA" target="_blank" style="text-decoration: none; color: inherit;">
                                 <i class="fas fa-map-marked-alt mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 </a>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="https://www.utoronto.ca/" target="_blank" style="text-decoration: none; color: inherit;">Toronto, Ontario</a></div>
+                                <div class="small text-black-50"><a href="https://goo.gl/maps/Rhtn3knZB1faM2JGA" target="_blank" style="text-decoration: none; color: inherit;">Toronto, Ontario</a></div>
                             </div>
                         </div>
                     </div>
