--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="assets/docs/jhan-resume.pdf" target="_blank">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="assets/docs/jessebinghan-resume.pdf" target="_blank">Resume</a></li>
                     </ul>
                 </div>
             </div>
