changed hashing function

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Fractal Education</h4>
-                                    <p class="mb-0 text-white-50">Mock website using Apache + MySQL database to store login information securely (MD5).</p>
+                                    <p class="mb-0 text-white-50">Mock website using Apache + MySQL database to store login information securely (SHA).</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
