--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 </a>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="mailto:jesse@kunjiajia.com" target="_blank" style="text-decoration: none; color: inherit;">jesse@kunjiajia.com</a></div>
+                                <div class="small text-black-50"><a href="mailto:jessehanca@gmail.com" target="_blank" style="text-decoration: none; color: inherit;">jessehanca@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
